Update Pokemon.java